--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>CatPhotoApp</title>
+    <title>My Portfolio</title>
   </head>
   <body>
     <main>
-      <h1>CatPhotoApp</h1>
+      <h1>About me</h1>
       <section>
-        <h2>Cat Photos</h2>
+        <h2>Who Am ı?</h2>
         <!-- TODO: Add link to cat photos -->
-        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
+        <p>I am a 15 year old boy(probably older by the time you're readin this) aimig to be a programer
+        (no im not gonna send you my feet pic) <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpreview.redd.it%2F04qffw64aox41.png%3Fwidth%3D960%26crop%3Dsmart%26auto%3Dwebp%26s%3D3460bd950512514ebe912d362097310a8b6a2bc3&f=1&nofb=1&ipt=e2013c675e87ce7d6e1ebd837eca2a30a55ae76ae20c1def50d0a3888ce2f96f&ipo=images">click here for cute cat photos<a/></p>
         <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
       </section>
       <section>
