--- a/index.html
+++ b/index.html
@@ -11,56 +11,36 @@
       <section>
         <h2>Who Am ı?</h2>
         <!-- TODO: Add link to cat photos -->
-        <p>I am a 15 year old boy(probably older by the time you're readin this) aimig to be a programer
-        (no im not gonna send you my feet pic) <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpreview.redd.it%2F04qffw64aox41.png%3Fwidth%3D960%26crop%3Dsmart%26auto%3Dwebp%26s%3D3460bd950512514ebe912d362097310a8b6a2bc3&f=1&nofb=1&ipt=e2013c675e87ce7d6e1ebd837eca2a30a55ae76ae20c1def50d0a3888ce2f96f&ipo=images">click here for cute cat photos<a/></p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+        <p>I am a 15 year old boy(probably older by the time you're reading this) aims to be a programer
+        (no im not gonna send you my feet pic) <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpreview.redd.it%2F04qffw
+        64aox41.png%3Fwidth%3D960%26crop%3Dsmart%26auto%3Dwebp%26s%3D
+        3460bd950512514ebe912d362097310a8b6a2bc3&f=1&nofb=1&ipt=e2013c675e87ce7d6e1ebd837eca2a30a55ae76ae20c1def50d0a3888ce2f96f&ipo=images">click here for cute cat photos</a></p>
+        <a href="https://freecatphotoapp.com"><img src="https://images7.memedroid.com/images/UPLOADED713/654ed1485fcd6.webp" alt="A cute orange cat lying on its back."></a>
       </section>
       <section>
-        <h2>Cat Lists</h2>
-        <h3>Things cats love:</h3>
+        <h2>my hobbies</h2>
         <ul>
-          <li>cat nip</li>
-          <li>laser pointers</li>
-          <li>lasagna</li>
+          <li>playing BOTW</li>
+          <li>playing TOTK</li>
+          <li>coffee</li>
         </ul>
         <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHIjGnhMlZ_PEUjpc39h_3B48B5i2f0s8uOA&s" alt="A slice of lasagna on a plate.">
           <figcaption>Cats <em>love</em> lasagna.</figcaption>  
         </figure>
-        <h3>Top 3 things cats hate:</h3>
+        <h3>Top 3 things i hate:</h3>
         <ol>
-          <li>flea treatment</li>
-          <li>thunder</li>
-          <li>other cats</li>
+          <li>black people</li>
+          <li>white people</li>
+          <li>people</li>
         </ol>
         <figure>
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-          <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
+          <figcaption>i fucking love Cats </figcaption>  
         </figure>
-      </section>
-      <section>
-        <h2>Cat Form</h2>
-        <form action="https://freecatphotoapp.com/submit-cat-photo">
-          <fieldset>
-            <legend>Is your cat an indoor or outdoor cat?</legend>
-            <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
-            <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
-          </fieldset>
-          <fieldset>
-            <legend>What's your cat's personality?</legend>
-            <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
-            <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
-            <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
-          </fieldset>
-          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-          <button type="submit">Submit</button>
-        </form>
-      </section>
-    </main>
-    <footer>
-      <p>
-        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-      </p>
+      
     </footer>
   </body>
-</html>
+</html><!DOCTYPE html>
+
+
