--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <main>
@@ -12,17 +13,17 @@
         <h2>Who Am ı?</h2>
         <!-- TODO: Add link to cat photos -->
         <p>I am a 15 year old boy(probably older by the time you're reading this) aims to be a programer
-        (no im not gonna send you my feet pic) <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpreview.redd.it%2F04qffw
-        64aox41.png%3Fwidth%3D960%26crop%3Dsmart%26auto%3Dwebp%26s%3D
-        3460bd950512514ebe912d362097310a8b6a2bc3&f=1&nofb=1&ipt=e2013c675e87ce7d6e1ebd837eca2a30a55ae76ae20c1def50d0a3888ce2f96f&ipo=images">click here for cute cat photos</a></p>
-        <a href="https://freecatphotoapp.com"><img src="https://images7.memedroid.com/images/UPLOADED713/654ed1485fcd6.webp" alt="A cute orange cat lying on its back."></a>
+        (no im not gonna send you my feet pic) 
       </section>
       <section>
-        <h2>my hobbies</h2>
+        <h2 class="dis">my hobbies</h2>
         <ul>
-          <li>playing BOTW</li>
-          <li>playing TOTK</li>
-          <li>coffee</li>
+          <li id="botw" class="carpıcı">playing BOTW</li>
+          <iframe class="middle" src="https://giphy.com/embed/3gIS6nsnIeMXiqF3vZ" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+          <li class="carpıcı">tourturing these guys onTOTK</li>
+          <iframe src="https://giphy.com/embed/37adYL4DufbQ8D5Ylz" width="480" height="408" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+          <li class="carpıcı dis">coffee</li>
+          <iframe  src="https://giphy.com/embed/3oriO04qxVReM5rJEA" width="432" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </ul>
         <figure>
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHIjGnhMlZ_PEUjpc39h_3B48B5i2f0s8uOA&s" alt="A slice of lasagna on a plate.">
@@ -42,5 +43,4 @@
     </footer>
   </body>
 </html><!DOCTYPE html>
-
 
